Fix some stuff on mobile

--- a/frontend/src/components/Explore/Mobile/mobileExplore.css
+++ b/frontend/src/components/Explore/Mobile/mobileExplore.css
@@ -18,5 +18,5 @@
 }
 
 .explore-mobile-cards-container {
-  padding-top: calc(6vh + 2px);
+  padding-top: 52px;
 }
