--- a/frontend/src/components/Explore/explore.css
+++ b/frontend/src/components/Explore/explore.css
@@ -110,7 +110,7 @@
 
 .explore-category-nav-container button {
   flex: 1;
-  height: 6vh;
+  height: 50px;
   font-weight: 500;
   font-size: 16px;
 }
